--- a/bin/sheet.html
+++ b/bin/sheet.html
@@ -18,33 +18,33 @@
 		<!-- <output id="list"></output> -->
 
 		<!-- <script> -->
-		<!-- 	function handleFileSelect(evt) { -->
-		<!-- 					evt.stopPropagation(); -->
-		<!-- 					evt.preventDefault(); -->
+			<!-- 	function handleFileSelect(evt) { -->
+								<!-- 					evt.stopPropagation(); -->
+								<!-- 					evt.preventDefault(); -->
 
-		<!-- 					var files = evt.dataTransfer.files; // FileList object. -->
+								<!-- 					var files = evt.dataTransfer.files; // FileList object. -->
 
-		<!-- 					// files is a FileList of File objects. List some properties. -->
-		<!-- 					var output = []; -->
-		<!-- 					for (var i = 0, f; f = files[i]; i++) { -->
-		<!-- 									output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ', -->
-		<!-- 													f.size, ' bytes, last modified: ', -->
-		<!-- 													f.lastModifiedDate.toLocaleDateString(), '</li>'); -->
-		<!-- 								} -->
-		<!-- 					document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>'; -->
-		<!-- 				} -->
+							<!-- 					// files is a FileList of File objects. List some properties. -->
+								<!-- 					var output = []; -->
+								<!-- 					for (var i = 0, f; f = files[i]; i++) { -->
+								<!-- 									output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ', -->
+								<!-- 													f.size, ' bytes, last modified: ', -->
+								<!-- 													f.lastModifiedDate.toLocaleDateString(), '</li>'); -->
+								<!-- 								} -->
+								<!-- 					document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>'; -->
+								<!-- 				} -->
 
-		<!-- 	function handleDragOver(evt) { -->
-		<!-- 					evt.stopPropagation(); -->
-		<!-- 					evt.preventDefault(); -->
-		<!-- 					evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy. -->
-		<!-- 				} -->
+								<!-- 	function handleDragOver(evt) { -->
+								<!-- 					evt.stopPropagation(); -->
+								<!-- 					evt.preventDefault(); -->
+								<!-- 					evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy. -->
+							<!-- 				} -->
 
-		<!-- 	// Setup the dnd listeners. -->
-		<!-- 	var dropZone = document.getElementById('drop_zone'); -->
-		<!-- 	dropZone.addEventListener('dragover', handleDragOver, false); -->
-		<!-- 	dropZone.addEventListener('drop', handleFileSelect, false); -->
-		<!-- </script> -->
+								<!-- 	// Setup the dnd listeners. -->
+								<!-- 	var dropZone = document.getElementById('drop_zone'); -->
+								<!-- 	dropZone.addEventListener('dragover', handleDragOver, false); -->
+								<!-- 	dropZone.addEventListener('drop', handleFileSelect, false); -->
+								<!-- </script> -->
 		<!-- ===================================================================== -->
 		<!-- ===================================================================== -->
 
@@ -56,10 +56,12 @@
 
 		<!-- ===================================================================== -->
 		<!-- ===================================================================== -->
-		<label id="loadbutton">
-			<input id="inputcsv" type="file" accept=".csv"></input>
-			Upload .csv data file!
-		</label>
+		<!-- <label id="uploadbutton"> -->
+		<!-- 	<input id="inputcsv" type="file" accept=".csv"></input> -->
+		<!-- 	Upload .csv data file! -->
+		<!-- </label> -->
+		<input id="inputcsv" type="file" accept=".csv"></input>
+		<button id="loadbutton" accesskey="l">Load the data</button>
 		<button id="drawbutton" accesskey="d">Draw the data</button>
 		<!-- ===================================================================== -->
 		<!-- ===================================================================== -->
