--- a/bin/sheet.html
+++ b/bin/sheet.html
@@ -9,7 +9,9 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 		<!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+		<script src="https://d3js.org/d3.v7.min.js"></script>
+		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	</head>
 	<body>
 		<!-- ===================================================================== -->
